Fix result log clipping container

--- a/src/app/components/timeline-step/timeline-step.component.sass
+++ b/src/app/components/timeline-step/timeline-step.component.sass
@@ -10,6 +10,11 @@
 .result-log
     margin-block: 1rem
 
+.log-text
+    overflow: auto
+    //white-space: pre-wrap
+    //overflow-wrap: anywhere
+
 .notes-card
     margin-block-end: 1rem
 
